fix: fixed large gap between title and projects div

--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ body {
   justify-content: center;
   align-content: center;
   gap: 30px;
-  margin-top: 50px;
+  margin-top: 10px;
   margin-bottom: 50px;
   border: 3px solid #fff;
   border-radius: 2em;
@@ -122,9 +122,6 @@ body {
   border: 3px solid #fff;
   border-radius: 2em;
   width: 50vw;
-}
-
-.autobiography p {
 }
 
 .footer {
